test_fm/_test07.ref
Error: local redeclaration of class 'Main' in '_test07.nj' on line 10
