test_fm/_test07.nj
//
// two class declarations
// local class redeclaration
//

public class Main extends Object {
    public static void main(){}
}

class Main extends Object {
}
